// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`exports exports_with_jsr 1`] = `
"{
	"name": "@ryoppippi/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./src/index.ts"
	},
	"publish": {
		"include": [
			"dist"
		]
	}
}"
`;

exports[`exports exprts_without_jsr 1`] = `
"{
	"name": "@ryoppippi/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	},
	"publish": {
		"include": [
			"dist"
		]
	}
}"
`;

exports[`exports exports_without_jsr_imports_object 1`] = `
"{
	"name": "@ryoppippi/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	},
	"publish": {
		"include": [
			"dist"
		]
	}
}"
`;

exports[`files test without files 1`] = `
"{
	"name": "@dummy/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	}
}"
`;

exports[`files test includes 1`] = `
"{
	"name": "@ryoppippi/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	},
	"publish": {
		"include": [
			"src/**/*.ts",
			"dist"
		]
	}
}"
`;

exports[`files test excludes 1`] = `
"{
	"name": "@ryoppippi/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	},
	"publish": {
		"include": [
			"dist"
		],
		"exclude": [
			"src/**/*.ts",
			"node_modules"
		]
	}
}"
`;

exports[`name test gen name 1`] = `
"{
	"name": "@ryoppippi/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	}
}"
`;

exports[`name test jsr name 1`] = `
"{
	"name": "@ryoppippi/helloworld",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	}
}"
`;

exports[`basic 1`] = `
"{
	"name": "@ryoppippi/dummy",
	"version": "0.1.0",
	"exports": {
		".": "./dist/index.js"
	},
	"publish": {
		"include": [
			"dist"
		]
	}
}"
`;
